Bug 754303 - WebGLUniformLocation doesn't need to be a WebGLRefCountedObject - r=jrmuizel