content/canvas/src/WebGLContext.h
@@ -1317,7 +1317,6 @@ protected:
     WebGLFastArray<WebGLShader*> mShaders;
     WebGLFastArray<WebGLRenderbuffer*> mRenderbuffers;
     WebGLFastArray<WebGLFramebuffer*> mFramebuffers;
-    WebGLFastArray<WebGLUniformLocation*> mUniformLocations;
 
     // PixelStore parameters
     uint32_t mPixelStorePackAlignment, mPixelStoreUnpackAlignment, mPixelStoreColorspaceConversion;
@@ -2957,7 +2956,6 @@ public:
 class WebGLUniformLocation MOZ_FINAL
     : public nsIWebGLUniformLocation
     , public WebGLContextBoundObject
-    , public WebGLRefCountedObject<WebGLUniformLocation>
 {
 public:
     WebGLUniformLocation(WebGLContext *context, WebGLProgram *program, GLint location, const WebGLUniformInfo& info)
@@ -2968,17 +2966,14 @@ public:
         , mInfo(info)
     {
         mElementSize = info.ElementSize();
-        mMonotonicHandle = mContext->mUniformLocations.AppendElement(this);
     }
 
     ~WebGLUniformLocation() {
-        DeleteOnce();
     }
 
-    void Delete() {
-        mProgram = nsnull;
-        mContext->mUniformLocations.RemoveElement(mMonotonicHandle);
-    }
+    // needed for certain helper functions like ValidateObject.
+    // WebGLUniformLocation's can't be 'Deleted' in the WebGL sense.
+    bool IsDeleted() const { return false; }
 
     const WebGLUniformInfo &Info() const { return mInfo; }
 
@@ -2998,7 +2993,6 @@ protected:
     GLint mLocation;
     WebGLUniformInfo mInfo;
     int mElementSize;
-    WebGLMonotonicHandle mMonotonicHandle;
     friend class WebGLProgram;
 };
 
